Small bug fixes with client side
- Spinner doesn't mess with the scroll bar anymore
- No horizontal scroll bar on index.html

--- a/stylometryproject/stylometryapp/static/styles/loadingSpinner.css
+++ b/stylometryproject/stylometryapp/static/styles/loadingSpinner.css
@@ -9,7 +9,7 @@
     margin: 60px auto;
     font-size: 7px;
     position: relative;
-    text-indent: -9999em;
+    /* text-indent: -9999em; */
     border-top: 1.1em solid rgba(216, 112, 22, 0.2);
     border-right: 1.1em solid rgba(216, 112, 22, 0.2);
     border-bottom: 1.1em solid rgba(216, 112, 22, 0.2);
